--- a/task1.css
+++ b/task1.css
@@ -1,12 +1,11 @@
-div{
-    border: 1PX solid black;
-    flex-direction: column;
-  
-    
- 
+.container{
+    display: flex;
 }
+
+
 .p1{
     display: flex;
+    border:1px solid black;
     
     flex-direction: column;
     width: 200px;
@@ -17,10 +16,15 @@ div{
 .p2{
     display: flex;
     flex-direction: column;
+   
     width: 200px;
     height: 500px;
     padding: 5px;
     margin: 5px;
+    border:1px solid black;
+    position: relative;
+    
+
 }
 .p3{
     display: flex;
@@ -29,9 +33,17 @@ div{
     height: 500px;
     padding: 5px;
     margin: 5px;
+    border:1px solid black;
+    position: relative;
+    
 }
 footer{
     color: #fff9f9;
     background-color: black;
+    position:absolute;
+    bottom:0;
+    width: 100%;
+    left: 0;
+    
    
 }
