--- a/task2.css
+++ b/task2.css
@@ -1,9 +1,16 @@
-.img{
-    display: inline-block;
+.container{
+    
     display: grid;
-grid-template-columns: repeat(3,ifr);
- 
-    gap: 20px;
-    width: 500px;
+    grid-template-columns:repeat(3,1fr);
+    grid-template-rows:repeat(3,1fr);
+    gap: 10px;
+    width: 250px;
     height: 500px;
+    padding: 40px;
 }
+
+.ss{
+    height: 450px;
+    width:250px
+}
+
