--- a/task4.css
+++ b/task4.css
@@ -7,10 +7,9 @@
 
 .container{
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
-    height: 900px;
-    max-width: 100%;
+    max-width: auto;
     border: 10px solid goldenrod;
 }
   
@@ -18,14 +17,13 @@
 
 .box {
     width: 25%;
-   
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 70px;
     color: white;
     font-weight: bold;
-    align-items: stretch;
 }
 
 
@@ -40,3 +38,4 @@
 .box7 { background-color: tomato; }
 .box8 { background-color: lightgray; }
 .box9 { background-color: mediumseagreen; }
+.box10 { background-color: lightseagreen; }
